--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,276 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+    --red: #EA1009;
+    --white: #FFFFFF;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+    font-family: Poppins-regular;
+    src: url(../public/Fonts/Poppins/Poppins-Regular.ttf);
+}
+
+@font-face {
+    font-family: Poppins-medium;
+    src: url(../public/Fonts/Poppins/Poppins-Medium.ttf);
+}
+
+@font-face {
+    font-family: Poppins-bold;
+    src: url(../public/Fonts/Poppins/Poppins-Bold.ttf);
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    color: #FFFFFF;
+    font-family: Poppins-regular;
+}
+
+html {
+    background-color: black;
+    overflow: hidden;
+}
+
+#root {
+    display: flex;
+}
+
+@keyframes thunderFlash {
+    0%{opacity: 0;}
+    3.22%{opacity: 1;}
+    5%{opacity: 0.5;}
+    10%{opacity: 0.8;}
+    100%{opacity: 0;}
+}
+
+@keyframes thunderFlash2 {
+    0%{opacity: 0;}
+    3.22%{opacity: 1;}
+    20%{opacity: 0.7;}
+    25%{opacity: 0.5;}
+    30%{opacity: 0.6;}
+    100%{opacity: 0;}
+}
+
+.ThunderBackground {
+    position: absolute;
+    z-index: -1;
+}
+
+.thunder {
+    position: absolute;
+    filter: contrast(500%);
+}
+
+.thunder1 {
+    opacity: 0.3;
+    left: -200px;
+    top: -400px;
+    width: 1800px;
+    height: 1800px;
+    transform: rotate(54.000042deg);
+    animation: thunderFlash 3.1s infinite;
+}
+
+.thunder2 {
+    opacity: 0.3;
+    position: absolute;
+    left: 965px;
+    top: -500px;
+    width: 1800px;
+    height: 1800px;
+    transform: rotate(-12.00001deg);
+    animation: thunderFlash2 3.1s infinite;
+    animation-delay: 2s;
+}
+
+.LeftSide {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 65%;
+    height: 100vh;
+}
+
+header {
+    width: 100%;
+    display: flex;
+    column-gap: 100px;
+    height: 25%;
+}
+
+nav {
+    margin-top: 90px;
+    width: 60%;
+}
+
+.nav-list {
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+}
+.nav-list li {
+    padding: 25px;
+    font-size: 1.2em;
+}
+
+main {
+    height: 75%;
+}
+
+h1 {
+    font-family: Poppins-bold;
+    margin: 0px 0 0 100px;
+    font-size: 3.5em;
+    line-height: 60px;
+}
+
+.Presentation-span {
+    font-family: Poppins-bold;
+    display: inline-block;
+    color: var(--red);
+    text-shadow: 5px 2px 4px rgba(100,100,100,0.36);
+}
+
+.Slogan {
+    text-shadow: 2px 2px 2px #ffffff;
+    color: #ea1009;
+    font-family: Poppins-regular;
+    font-size: 2.5em;
+    margin: 20px 0 0 200px;
+}
+
+.HomeContent {
+    display: flex;
+    height: 100%;
+}
+
+.Kanjis {
+    font-size: 9em;
+    margin: 20px 40px  0 40px;
+}
+
+.Kanjis p {
+    font-family: SimSun;
+    line-height: 175px;
+}
+
+.CtaAndTeaser {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 40px;
+    width: 75%;
+    height: 60%;
+}
+
+.Cta {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.Btn-type1 {
+    margin-left: 20px;
+    width: 235px;
+    height: 93px;  
+    border-radius: 16px;
+    border: none;
+    background: linear-gradient(91deg, var(--red) 0%, var(--white) 200%);
+    font-family: Poppins-medium;
+    font-size: 1.6em;
+    cursor: pointer;
+}
+
+.Check-work {
+    margin-right: 100px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.Check-work-text {
+    font-size: 1.5em;
+    margin-right: 30px;
+}
+
+.Arrow {
+    width: 4px;
+    height: 200px;
+    position: relative;
+    background: var(--white);
+}
+
+.arrow-head {
+    position: absolute;
+    bottom: 0;
+    left: -8px;
+    width: 15px;
+    height: 15px;
+    border-top: 5px solid var(--white);
+    border-right: 5px solid var(--white);
+    transform: rotate(125deg) skewX(-20deg);
+}
+
+.Teaser {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.img-teaser-container {
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    box-shadow: 8px 10px 4px #ea1009;
+    margin-right: 50px;
+}
+
+.img-teaser {
+    position: relative;
+    top: -20px;
+    left: -10px;
+    width: 210px;
+}
+
+.Teaser-details {
+    position: relative;
+    height: 90px;
+}
+
+.Teaser-text {
+    font-size: 1.5em;
+    font-family: Poppins-regular;
+    line-height: 30px;
+}
+
+.module-border-wrap {
+    position: absolute;
+    bottom: -25px;
+    left: 450px;
+    width: 175px;
+    height: 70px;
+    padding: 1rem;
+    position: relative;
+    border-radius: 16px;
+    background: linear-gradient(to right, var(--red) 0%, var(--white)200%);
+    padding: 3px;
+}
+
+.Btn-type2 {
+    border-radius: 16px;
+    width: 175px;
+    height: 70px;
+    background: #000000;
+    font-family: Poppins-medium;
+    font-size: 2.5em;
+    cursor: pointer;
+}
+
+.RightSide {
+    width: 35%;
+    height: 100vh;
+}
+
+.Main-img {
+    height: 100vh;
 }
