--- a/src/ContactMe/ContactMe.css
+++ b/src/ContactMe/ContactMe.css
@@ -1,21 +1,111 @@
-input {
-    background: #000000;
-    display: block;
+:root {
+    --red: #EA1009;
+    --white: #FFFFFF;
 }
 
-textarea {
-    
-    background: #000000;
+
+
+h2 {
+    text-align: center;
+    padding: 30px;
+    font-family: Poppins-bold;
+    font-size: 2em;
 }
 
-.Contact-me-content {
-    width: 100%;
+.Contact-me-contente {
+    margin-top: 1vh;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 
 .Contact-me-form {
-    margin-top: 300px;
+    width: 40vw;
+    height: 80vh;
+    background: rgba( 255, 255, 255, 0.10 );
+    backdrop-filter: blur(10px);
+    border-radius: 10px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 80%;
+}
+
+form div {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    height: 20%;
+}
+
+label {
+    margin-bottom: 2vh;
+}
+
+input, textarea {
+    font-size: 1.2em;
+    padding: 10px;
+    outline: none;
+    width: 100%;
+    height: 40px;
+    border: none;
+    border-radius: 16px;
+    background: rgba( 255, 255, 255, 0.10 );
+    display: block;
+}
+
+textarea {
+    resize: none;
+    height: 100px;
+    width: 440px;
+    padding: 10px;
+    color: var(--white);
+}
+
+.links-section {
+    width: 30vw;
+    height: 60vh;
+    background: rgba( 255, 255, 255, 0.10 );
+    backdrop-filter: blur(10px);
+    border-radius: 10px;
+}
+
+.links-list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 60%;
+}
+
+.links-list li {
+    font-size: 1.5em;
+}
+
+.links-list li .fa-brands {
+    margin-right: 15px;
+}
+
+#form-btn {
+    font-family: Poppins-medium;
+    font-size: 1.5em;
+    height: 50px;
+    width: 60%;
+    border-radius: 16px;
+    border: none;
+    background: rgba( 255, 255, 255, 0.10 );
+    margin-top: 55px;
+    position: static;
+    transition: 1s;
+}
+
+#form-btn:hover {
+    background: var(--white);
+    color: rgba(0, 0, 0, 0.418);
+
 }
