--- a/src/Portfolio/Portfolio.css
+++ b/src/Portfolio/Portfolio.css
@@ -1,3 +1,19 @@
+:root {
+    --red: #EA1009;
+    --LightRed: #ff4741b4;
+    --white: #FFFFFF;
+    --LightWhite: rgba( 255, 255, 255, 0.10 );
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(44, 44, 44, 0.808);
+    border-radius: 10px;
+}
+
 .portfolio {
     height: 100vh;
     display: flex;
@@ -28,11 +44,11 @@
 .web-site-preview {
     display: flex;
     flex-direction: column;
-    margin-bottom: 50px;
-    height: 70vh;
+    height: 80vh;
     width: 60vw;
     grid-column: 2;
     grid-row: 1 / span 4;
+    margin-left: 70px;
 }
 
 .top-bar {
@@ -77,4 +93,46 @@
     height: 5%;
     border-radius: 0 0 20px 20px;
     background: rgba(12,11,11,0.75);
+}
+
+.choose-a-project {
+    color: rgb(187, 187, 187);
+    border-radius: 15px;
+    margin: 50px 0 0 60px;
+    backdrop-filter: blur(10px);
+    background: rgba(12,11,11,0.45);
+    width: 20vw;
+    height: 60vh;
+    overflow-y: scroll;
+}
+
+.list-projects {
+    list-style: none;
+    height: 100%;
+    text-align: center;
+}
+
+.list-projects li {
+    border-bottom: 2px solid rgb(187, 187, 187);
+    padding: 20px;
+    transition: 0.5s ease;
+    font-weight: 600;
+}
+
+.list-projects li::selection {
+    background-color: var(--red);
+    color: var(--white);
+}
+
+.list-projects li:hover {
+    font-size: 1.5em;
+    color: rgb(41, 41, 41);
+    border-bottom: 2px solid rgb(41, 41, 41);
+    background-color: rgb(235, 235, 235);
+    cursor: pointer;
+}
+
+#kanji {
+    margin: 0 30px 0 0;
+    text-align: right;
 }
