--- a/src/index.css
+++ b/src/index.css
@@ -118,9 +118,9 @@ header {
 
 svg #text {
     cursor: default;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
+    --webkit-user-select: none;
+    --moz-user-select: none;
+    --ms-user-select: none;
     user-select: none;
 }
 
