--- a/src/AboutMe/AboutMe.css
+++ b/src/AboutMe/AboutMe.css
@@ -27,6 +27,14 @@
     align-items: center;
 }
 
+.Abm-container {
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .my-history {
     width: 80%;
     padding: 20px;
@@ -35,7 +43,9 @@
 
 .my-history p {
     margin-bottom: 5vh;
-    font-size: 1.1em;
+    font-size: 1.5em;
+    line-height: 50px;
+    text-align: justify;
 }
 
 .Abm-last-p {
@@ -43,10 +53,7 @@
 }
 
 #Abm-btn {
-    position: inherit;
-    margin-top: 60px;
     text-decoration: none;
-    position: relative;
 }
 
 .Abm-btn-text {
