--- a/src/ContactMe/ContactMe.css
+++ b/src/ContactMe/ContactMe.css
@@ -8,13 +8,6 @@
     height: 100vh;
 }
 
-h2 {
-    text-align: center;
-    padding: 30px;
-    font-family: Poppins-bold;
-    font-size: 2em;
-}
-
 .Contact-me-contente {
     margin-top: 1vh;
     display: flex;
@@ -25,9 +18,13 @@ h2 {
 .Contact-me-form {
     width: 40vw;
     height: 80vh;
-    background: rgba( 255, 255, 255, 0.10 );
-    backdrop-filter: blur(10px);
-    border-radius: 10px;
+}
+
+.contactMe-tiltle {
+    text-align: center;
+    padding: 30px;
+    font-family: Poppins-regular;
+    font-size: 2em;
 }
 
 form {
@@ -35,7 +32,7 @@ form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 80%;
+    height: 90%;
 }
 
 form div {
@@ -57,8 +54,9 @@ input, textarea {
     height: 40px;
     border: none;
     border-radius: 16px;
-    background: rgba( 255, 255, 255, 0.10 );
+    background: rgba(12,11,11,0.75);
     display: block;
+    color: #fff6f0;
 }
 
 textarea {
@@ -66,15 +64,15 @@ textarea {
     height: 100px;
     width: 440px;
     padding: 10px;
-    color: var(--white);
+}
+
+textarea::placeholder {
+    color: #fff6f0;;
 }
 
 .links-section {
     width: 30vw;
     height: 60vh;
-    background: rgba( 255, 255, 255, 0.10 );
-    backdrop-filter: blur(10px);
-    border-radius: 10px;
 }
 
 .links-list {
@@ -101,7 +99,8 @@ textarea {
     width: 60%;
     border-radius: 16px;
     border: none;
-    background: rgba( 255, 255, 255, 0.10 );
+    background: rgba(12,11,11,0.75);
+    color: #fff6f0;
     margin-top: 55px;
     position: static;
     transition: 1s;
