--- a/src/Portfolio/Portfolio.css
+++ b/src/Portfolio/Portfolio.css
@@ -27,19 +27,10 @@
     width: 100vw;
     height: 80vh;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    place-items:  center;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: repeat(3, 1fr);
     margin-bottom: 5vh;
-}
-
-.choose-a-project {
-    grid-column: 1;
-    grid-row: 1 / span 3;
-}
-
-#kanji {
-    grid-column: 3;
-    grid-row: 3 / span 2;
 }
 
 .web-site-preview {
@@ -49,7 +40,7 @@
     width: 60vw;
     grid-column: 2;
     grid-row: 1 / span 4;
-    margin-left: 70px;
+    /* margin-left: 170px; */
 }
 
 .top-bar {
@@ -97,14 +88,29 @@
 }
 
 .choose-a-project {
-    color: rgb(187, 187, 187);
+    grid-column: 1;
+    grid-row: 1 / span 3;
+    justify-content: center;
     border-radius: 15px;
-    margin: 50px 0 0 60px;
+    /* margin: 50px 0 0 60px; */
     backdrop-filter: blur(10px);
-    background: rgba(12,11,11,0.45);
+    background: rgba(12,11,11,0.75);
     width: 20vw;
     height: 60vh;
     overflow-y: scroll;
+}
+
+.choose-project-title {
+    text-align: center;
+    padding: 15px;
+    font-family: Poppins-regular;
+    font-size: 2em;
+    color: #fff6f0;
+}
+
+.choose-project-title::selection {
+    background-color: var(--red);
+    color: var(--white);
 }
 
 .list-projects {
@@ -114,10 +120,11 @@
 }
 
 .list-projects li {
-    border-bottom: 2px solid rgb(187, 187, 187);
+    border-bottom: 2px solid #fff6f0;
     padding: 20px;
     transition: 0.5s ease;
     font-weight: 600;
+    color: #fff6f0;
 }
 
 .list-projects li::selection {
@@ -127,9 +134,9 @@
 
 .list-projects li:hover {
     font-size: 1.5em;
-    color: rgb(41, 41, 41);
+    color: #050505;
     border-bottom: 2px solid rgb(41, 41, 41);
-    background-color: rgb(235, 235, 235);
+    background-color: #fff6f0;
     cursor: pointer;
 }
 
