--- a/src/index.css
+++ b/src/index.css
@@ -139,8 +139,10 @@ nav {
 
 main {
     width: 100%;
+    height: 80vh;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
 }
 
 .Presentation {
@@ -195,6 +197,10 @@ h1::selection {
 .Teaser {
     margin: 20px auto 0 auto;
     display: flex;
+    /* modif */
+    flex-direction: column;
+    row-gap: 20px;
+    /* ---- */
     align-items: center;
     justify-content: space-evenly;
     position: relative;
@@ -202,8 +208,10 @@ h1::selection {
 }
 
 .img-teaser-container {
-    width: 105px;
-    height: 105px;
+    /* modif */
+    width: 175px;
+    height: 175px;
+    /* ---- */
     overflow: hidden;
     border-radius: 15px;
     transition: 0.5s;
@@ -213,7 +221,9 @@ h1::selection {
 .img-teaser {
     position: relative;
     top: -10px;
-    width: 105px;
+    /* modif */
+    width: 175px;
+    /* ---- */
 }
 
 .img-teaser::selection {
@@ -226,7 +236,11 @@ h1::selection {
 }
 
 .Teaser-text {
-    width: 60vw;
+    /* modif */
+    font-size: 1.2em;
+    width: 90vw;
+    text-align: center;
+    /* ---- */
     padding: 10px;
     font-family: Poppins-medium;
 }
@@ -248,6 +262,9 @@ h1::selection {
     transition: 1s;
     position: relative;
     overflow: hidden;
+    width: fit-content;
+    margin:  15px auto 0 auto;
+    text-decoration: none;
 }
 
 .teaser-btn-text {
@@ -297,10 +314,6 @@ h1::selection {
     width: 100%;
 }
 
-.RightSide-text {
-    width: 50vw;
-}
-
 .RightSide-text p {
     padding: 5px;
     background: rgba( 255, 255, 255, 0.10 );
@@ -309,6 +322,7 @@ h1::selection {
 }
 
 .Main-img {
+    display: none;
     box-shadow: 0 0 20px var(--red);
     width: 170px;
     border-radius: 16px;
@@ -317,10 +331,6 @@ h1::selection {
 .Main-img::selection {
     background-color: var(--red);
     color: var(--white);
-}
-
-.RightSide-btn {
-    left: 30px;
 }
 
 @media screen and (max-width: 375px) {
