--- a/src/ContactMe/ContactMe.css
+++ b/src/ContactMe/ContactMe.css
@@ -8,7 +8,7 @@
     height: 100vh;
 }
 
-.Contact-me-contente {
+.Contact-me-content {
     margin-top: 1vh;
     display: flex;
     justify-content: space-around;
