--- a/src/ContactMe/ContactMe.css
+++ b/src/ContactMe/ContactMe.css
@@ -46,7 +46,7 @@ label {
     margin-bottom: 2vh;
 }
 
-input, textarea {
+input {
     font-size: 1.2em;
     padding: 10px;
     outline: none;
@@ -57,13 +57,6 @@ input, textarea {
     background: rgba(12,11,11,0.75);
     display: block;
     color: #fff6f0;
-}
-
-textarea {
-    resize: none;
-    height: 100px;
-    width: 440px;
-    padding: 10px;
 }
 
 textarea::placeholder {
