--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ header {
     height: 15vh;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     column-gap: 50px;
 }
 
